--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,25 @@
+#name: CI
+#on:
+#  push:
+#    branches:
+#      - main
+#jobs:
+#  licensight:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#      - name: Licensight scan for default branch
+#        if: github.ref == 'refs/heads/main'
+#        run: |
+#          curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
+#          ./licensight-scan generate -d . -a ${{ vars.LICENSIGHT_APPLICATION_NAME }} -e ${{ vars.LICENSIGHT_URL }} -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} -b ${{ github.head_ref }}
+
 name: CI
 on:
   pull_request:
     branches:
-      - 'main'
+      - main
 jobs:
   licensight:
     runs-on: ubuntu-latest
