--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,3 @@
-#stages:
-#  - deploy
-#
-#licensight:
-#  # adjust the stage if needed:
-#  stage: deploy
-#  # define an appropriate build base image in the step if needed:
-#  # image: <image-name>
-#  cache: {}
-#  script:
-#    - apt-get update && apt-get install -y curl maven
-#    - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-#    - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr
-#  rules:
-#    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-
 stages:
   - deploy
 
@@ -24,7 +8,7 @@ licensight:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
     - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr
   rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"  && $GITLAB_TOKEN != null
 
 #build-licensight-scan-without-access-token:
 #  image: maven:3.8-openjdk-11
