--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,9 @@ licensight:
   script:
     - apt update && apt install -y python3 golang maven curl
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -t $CI_COMMIT_TAG
+    - ./licensight-scan generate -d ./Demo-Swagger-App/demo-swagger-app -a $LICENSIGHT_APPLICATION_NAME -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr -del "**/service-identify/**;**/service-notification/**"
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $GITLAB_TOKEN != null
 
 #build-licensight-scan-without-access-token:
 #  image: maven:3.8-openjdk-11
