--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: scan
 on:
   pull_request:
     branches:
-      - main
+      - '*'
 jobs:
   licensight:
     runs-on: ubuntu-latest
@@ -12,9 +12,11 @@ jobs:
       - name: Licensight scan for the Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: github.event.pull_request.head.ref == github.event.repository.default_branch
         run: |
           curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-          ./licensight-scan generate -d ./demo-swagger-app -a ${{ vars.LICENSIGHT_APPLICATION_NAME }} -e ${{ vars.LICENSIGHT_URL }} -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} -b ${{ github.head_ref }} -dpr -del "**/service-identify/**;**/service-security/**"
+          ./licensight-scan generate -d ./demo-swagger-app -a ${{ vars.LICENSIGHT_APPLICATION_NAME }} -e ${{ vars.LICENSIGHT_URL }} -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} -b ${{ github.head_ref }} -dpr true
+
 #name: scan
 #on:
 #  push:
