--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - '*'
 jobs:
   licensight:
-    if: github.event.pull_request.head.ref == github.event.repository.default_branch
+    if: github.event.pull_request.base.ref == github.event.repository.default_branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
