--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ licensight:
   script:
     - apt update && apt install -y python3 golang maven curl
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-    - ./licensight-scan generate -d . -a '$LICENSIGHT_APPLICATION_NAME' -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr true
+    - ./licensight-scan generate -d . -a "$LICENSIGHT_APPLICATION_NAME" -e $LICENSIGHT_URL -at $LICENSIGHT_ACCESS_TOKEN -b $CI_COMMIT_REF_NAME -dpr true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $GITLAB_TOKEN != null
 
