--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,20 @@
 name: scan
 on:
-  push:
-    tags:
-      - "*"
+  pull_request:
+    branches:
+      - '*'
 jobs:
   licensight:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Licensight scan for tag
+      - name: Licensight scan for the Pull Request
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan && chmod +x ./licensight-scan
-          ./licensight-scan generate -d . -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" -e ${{ vars.LICENSIGHT_URL }} -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} -t ${{ github.ref_name }}
-
+          ./licensight-scan generate -d . -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" -e ${{ vars.LICENSIGHT_URL }} -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} -b ${{ github.head_ref }} -dpr true
 
 #name: scan
 #on:
