--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,11 @@ licensight-mr:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
     - ./licensight-scan generate -d . \
-    - -a "$LICENSIGHT_APPLICATION_NAME" \
-    - -e $LICENSIGHT_URL \
-    - -at $LICENSIGHT_ACCESS_TOKEN \
-    - -b $CI_COMMIT_REF_NAME \
-    - -dpr true
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
+      -b $CI_COMMIT_REF_NAME \
+      -dpr true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $GITLAB_TOKEN != null
 
@@ -23,10 +23,10 @@ licensight-default-branch:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
     - ./licensight-scan generate -d . \
-    - -a "$LICENSIGHT_APPLICATION_NAME" \
-    - -e $LICENSIGHT_URL \
-    - -at $LICENSIGHT_ACCESS_TOKEN \
-    - -b $CI_COMMIT_BRANCH
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
+      -b $CI_COMMIT_BRANCH
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
@@ -37,10 +37,10 @@ licensight-tag:
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
     - ./licensight-scan generate -d . \
-    - -a "$LICENSIGHT_APPLICATION_NAME" \
-    - -e $LICENSIGHT_URL \
-    - -at $LICENSIGHT_ACCESS_TOKEN \
-    - -t $CI_COMMIT_TAG
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
+      -t $CI_COMMIT_TAG
   rules:
     - if: $CI_COMMIT_TAG
 
