--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,12 @@ jobs:
         run: |
           curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
           chmod +x ./licensight-scan
-          ./licensight-scan generate
-            -d .
-            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}"
-            -e ${{ vars.LICENSIGHT_URL }}
-            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }}
-            -b ${{ github.head_ref }}
+          ./licensight-scan generate \
+            -d . \
+            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" \
+            -e ${{ vars.LICENSIGHT_URL }} \
+            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} \
+            -b ${{ github.head_ref }} \
             -dpr true
 
 
