--- a/.github/workflows/scan-default-branch.yml
+++ b/.github/workflows/scan-default-branch.yml
@@ -14,9 +14,9 @@ jobs:
         run: |
           curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
           chmod +x ./licensight-scan
-          ./licensight-scan generate
-            -d .
-            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}"
-            -e ${{ vars.LICENSIGHT_URL }}
-            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }}
+          ./licensight-scan generate \
+            -d . \
+            -a "${{ vars.LICENSIGHT_APPLICATION_NAME }}" \
+            -e ${{ vars.LICENSIGHT_URL }} \
+            -at ${{ secrets.LICENSIGHT_ACCESS_TOKEN }} \
             -b ${{ github.ref_name }}
