--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,13 @@ licensight-mr:
     - apt update && apt install -y python3 golang maven curl
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
-    - ./licensight-scan generate 
-      -d .
-      -a "$LICENSIGHT_APPLICATION_NAME"
-      -e $LICENSIGHT_URL
-      -at $LICENSIGHT_ACCESS_TOKEN
-      -b $CI_COMMIT_REF_NAME
+    - |
+    - ./licensight-scan generate \
+      -d . \
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
+      -b $CI_COMMIT_REF_NAME \
       -dpr true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $GITLAB_TOKEN != null
@@ -23,11 +24,12 @@ licensight-default-branch:
     - apt update && apt install -y python3 golang maven curl
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
-    - ./licensight-scan generate
-      -d .
-      -a "$LICENSIGHT_APPLICATION_NAME"
-      -e $LICENSIGHT_URL
-      -at $LICENSIGHT_ACCESS_TOKEN
+    - |
+    - ./licensight-scan generate \
+      -d . \
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
       -b $CI_COMMIT_BRANCH
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -38,11 +40,12 @@ licensight-tag:
     - apt update && apt install -y python3 golang maven curl
     - curl -O https://licensight.s3.eu-central-1.amazonaws.com/latest/linux/licensight-scan
     - chmod +x ./licensight-scan
-    - ./licensight-scan generate
-      -d .
-      -a "$LICENSIGHT_APPLICATION_NAME"
-      -e $LICENSIGHT_URL
-      -at $LICENSIGHT_ACCESS_TOKEN
+    - |
+    - ./licensight-scan generate \
+      -d . \
+      -a "$LICENSIGHT_APPLICATION_NAME" \
+      -e $LICENSIGHT_URL \
+      -at $LICENSIGHT_ACCESS_TOKEN \
       -t $CI_COMMIT_TAG
   rules:
     - if: $CI_COMMIT_TAG
